--- a/css/base.css
+++ b/css/base.css
@@ -878,7 +878,7 @@ button:focus {
         font-size: 4vw;
     }
 }
-
+/*
 @media screen and (max-width: 425px), screen and (max-height: 39.9em) {
 	.js .section__title span,
 	.js .section__description,
@@ -899,3 +899,4 @@ button:focus {
 		padding: 0.5rem;
 	}
 }
+*/
